fix: get rid of h-scrollbar when scrollbars always visible
`100vw` includes width under scrollbar, so be careful with how it's used and add `overflow-x: hidden` to <body>

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -70,6 +70,7 @@ html {
 body {
   margin: 0;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 noscript p {
@@ -249,7 +250,7 @@ body.home {
       top: 0;
       left: 50%;
       transform: translateX(-50%);
-      width: 100vw;
+      width: 100%;
       height: 100%;
       z-index: -1;
     }
@@ -313,7 +314,6 @@ body.home {
 
 .bleed {
   margin: 0.25rem 0 0;
-  width: 100vw;
   min-width: 100%;
   max-width: min(120vh, var(--max-element-width));
   align-self: center;
